<resources>
    <string name="app_name">FitGen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string-array name="tempValues3Layers">
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
    </string-array>

    <string-array name="tempValues1Layer">
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
    </string-array>

    <string-array name="flashModes">
        <item name="on">On</item>
        <item name="off">Off</item>
        <item name="auto">Auto</item>
    </string-array>

    <string-array name="languages">
        <item name="English">English</item>
        <item name="Spanish">Spanish</item>
    </string-array>

    <string-array name="viewWardrobeSpinner">
        <item name="all">all</item>
        <item name="t_shirt">T_shirt</item>
        <item name="shirt">Long Sleeve</item>
        <item name="shorts">Shorts</item>
        <item name="pants">Pants</item>
        <item name="shoes">Shoes</item>
        <item name="sweater">Sweater</item>
        <item name="light_jacket">Light Jacket</item>
        <item name="heavy_jacket">Heavy Jacket</item>
    </string-array>

    <string-array name="themesValues">
        <item name="light">#FFFFFFFF</item>
        <item name="dark">#676464</item>
    </string-array>

    <string-array name="themesNames">
        <item name="light">Light</item>
        <item name="dark">Dark</item>
    </string-array>

    <string name="insert_email_here">Insert Email Here</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="make_account">Make Account</string>
    <string name="show_password">show password</string>
    <string name="password_again_verify">Password Again (Verify)</string>
    <string name="back">Back</string>
    <string name="title_activity_make_profile">MakeProfile</string>
    <string name="Choose_Clothing_type">Choose Clothing Type</string>
    <string name="none_available_all">No Clothing available</string>
    <string name="none_available">No Clothing of this type available</string>
    <string name="three_layer_temp">Maximum temperature for three layers  </string>
    <string name="one_layer_temp">Minimum temperature for one layer  </string>
    <string name="flashTypes">Flash type for camera</string>
    <string name="you_do_not_have_any_saved_outfits">You do not have any saved outfits</string>
    <string name="delete_password">delete password</string>
    <string name="confirm">CONFIRM</string>
    <string name="add_change_password">Add/Change Password</string>
    <string name="modifying_a_user_profile">Modifying a user profile!</string>
    <string name="themeChanger">Theme</string>
    <string name="username">Username</string>
    <string name="save_outfit">Save Outfit</string>
    <string name="generate_outfit">Generate Outfit</string>
    <string name="random_outfit">Random Outfit</string>
    <string name="monochrome_outfit">FitGen© Outfit</string>
    <string name="flash_tip">ⓘTry changing flash settings if colors are inaccurate</string>
    <string name="make_profile">Make Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="display_name">FitGen©</string>
    <string name="view_wardrobe">View Wardrobe</string>
    <string name="view_saved">View Saved Outfits</string>
    <string name="add_to_wardrobe">Add To Wardrobe</string>
    <string name="create_profile">Create Profile</string>
    <string name="make_profile_header">Making a user profile!</string>
    <string name="enable_pass">Enable Password</string>
    <string name="insert_email_to_reset">Insert email to reset password</string>
    <string name="reset">RESET</string>
    <string name="settings">Settings</string>
    <string name="making_account_for_fitgen">Making account for FitGen!</string>
    <string name="take_photo">Take Photo</string>
    <string name="redo">Redo</string>
    <string name="add_another">Add another</string>
    <string name="is_this_water_resistant">Is this water-resistant?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="type">Type</string>
    <string name="id">Id</string>
    <string name="edit">EDIT</string>
    <string name="delete">Delete</string>
    <string name="default_username">Default Username</string>
    <string name="name">Name</string>
    <string name="choose_language">Choose Language</string>
    <string name="English">English</string>
    <string name="Spanish">Spanish</string>
    <string name="toggle_language">Toggle Language</string>
    <string name="choose_the_type">Choose the type:</string>
    <string name="current_weather">Current Weather</string>
    <string name="description">"Description: "</string>
    <string name="tempLabel">"Temperature: "</string>
    <string name="cloud_label">"Cloud cover: "</string>
    <string name="windLabel">"Wind speed: "</string>
    <string name="loc_permissions">App does not have location permissions from device</string>
    <string name="unable_to_parse_email">Unable to parse email. Please try again</string>
    <string name="unable_parse_text">Unable to parse text fields. Please try again</string>
    <string name="email_sent">Email sent.</string>
    <string name="photo_permission">Cannot take photos with permissions from device</string>
    <string name="cant_parse_image">Unable to parse image</string>
    <string name="parse_text_fields">Unable to parse text fields. Please try again</string>
    <string name="pass_length">Password must be at least 6 characters long. Please try again</string>
    <string name="pass_dont_match">Passwords does not match. Please try again</string>
    <string name="valid_email">Please enter a valid email. Please try again</string>
    <string name="sign_up_success">Sign Up Successful!</string>
    <string name="sign_in_success">Sign In Successful!</string>
    <string name="auth_failed">Authentication failed. Please make sure the email is not used in another account and correctly formatted, the password needs to be at least 6 characters long</string>
    <string name="compress_fail">[+] Error! Unable to compress image. Please try again</string>
    <string name="confirm_delete_pass">Confirm to delete password</string>
    <string name="confirm_delete_pass_q">Do you really want to delete your password?</string>
    <string name="confirm_delete_profile">Confirm to delete profile</string>
    <string name="confirm_delete_profile_q">Do you really want to delete your profile?</string>
    <string name="password_del">Password deleted</string>
    <string name="no_pass">You don\'t have a password setup</string>
    <string name="del_item">Deleted item\ </string>
    <string name="clothing_period"> clothing.</string>
    <string name="fail_color_data">Unable to parse color data for the </string>
    <string name="fail_image_data">Unable to parse image for the </string>
    <string name="fail_data_start">Unable to parse data for the </string>
    <string name="auth_failed_simple">Authentication failed.</string>
    <string name="fail_user_data">Unable to retrieve user data. Please try again</string>
    <string name="fail_monochrome">Unable to create monochrome outfit. Please add more items to the wardrobe.</string>
    <string name="outfit_name">Outfit name</string>
    <string name="name_outfit_question">Would you like to name your outfit? By default it\'ll be named Outfit</string>
    <string name="fail_no_name">Outfit saved. But no name was given</string>
    <string name="outfit_saved">Outfit saved.</string>
    <string name="confirmClothingDeletion">"Confirm to delete clothing"</string>
    <string name="ClothingDeletionMessage">If you delete this piece of clothing all outfits with it will also be deleted</string>
    <string name="fail_username">Unable to parse username fields. Please try again</string>
    <string name="fail_pass_dont_match">Unable to make an user profile, password does not match!</string>
    <string name="profile_success">Successfully made an user profile!</string>
    <string name="pass_protected">This account is password protected, enter password:</string>
    <string name="wrong_pass">Wrong password</string>
    <string name="fail_edit_profile">Unable to edit an user profile, password does not match!</string>
    <string name="edit_profile_success">Successfully edit an user profile!</string>
    <string name="dialog_delete_cache">Confirm to delete cache</string>
    <string name="dialog_delete_cache_msg">Do you want to delete cache? It\'ll make displaying the images slower</string>
    <string name="delete_cache">Delete Cache</string>
    <string name="enable_cache">Enable Cache</string>
    <string name="unable_retrieve_clothes">Unable to get clothes</string>
    <string name="check_colors_match_irl"> Try disabling/enabling flash in settings if the colors are not accurate</string>
</resources>
